# LEARNING__JAX_optimization

./: .gitignore  README.md  pyproject.toml  simply.py
notes/source/: conf.py  index.rst  jax.rst  optimization.rst
