[tool.poetry]
name = "learning__optimization"
version = "0.1.0"
description = ""
authors = ["Becks Simpson <becks.simpson@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jax = "^0.2.25"
Sphinx = "^4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
